# kaggle_pfsanta_public

./: README.md  wreath_sln.txt
cube-globe/: Cargo.toml  README.md
cube-globe/src/: io.rs  lib.rs  main.rs  perm.rs  solver.rs  union_find.rs
cube_solver/: readme.md  solve.py
wreath-exact/: Cargo.toml  README.md  merge.py  score.py
wreath-exact/src/: solver.rs
wreath-other/: minkwitz.cpp  readme.md
wreath-wildcard8/: wreath.cpp
