[package]
name = "flowlight"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "solver"
path = "src/solver.rs"

[dependencies]
proconio = "0.4.5"
csv = "1.3.0"
serde = { version = "1.0.193", features = ["derive"]}
clap = { version = "4.4.11", features = ["derive"] }
serde_json = "1.0.108"